--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,1 +1,9 @@
-<%# TODO: add sign-up form for users %>
+<%= form_for @user do |f| %>
+  <%= f.label :username %>
+  <%= f.text_field :username %><br/>
+  <%= f.label :email %>
+  <%= f.email_field :email %><br/>
+  <%= f.label :password %>
+  <%= f.password_field :password %><br/>
+  <%= f.submit %>
+<% end %>
